--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,9 +1,9 @@
-$steelBlue: hsl(234, 25%, 52%);
-$darkBlue: hsl(233, 54%, 16%);
-$gray: hsl(232, 10%, 56%);
-$pink: hsl(341, 92%, 62%);
-$mildPink: hsl(341, 100%, 83%);
-$white: hsl(0, 0%, 100%);
-$hotPink: hsl(322, 87%, 55%);
-$peach: hsl(13, 100%, 64%);
-$eveningSky: hsl(237, 100%, 64%);
+$steelBlue: #666CA3;
+$darkBlue: #13183F;
+$gray: #83869A;
+$pink: #F74780;
+$mildPink: #FFA7C3;
+$white: #FFFFFF;
+$hotPink: #F02AA6;
+$peach: #FF6F48;
+$eveningSky: #4851FF;
