--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
-  background: linear-gradient(#FFFFFF, rgba(72, 81, 255, 0.04));
+  background: linear-gradient(#FFFFFF, rgba(72, 81, 255, 0.065));
 }
 
 .button, .button_third, .button_second, .button_first {
@@ -112,6 +112,7 @@ body {
 
 .course_section {
   margin: 1rem;
+  margin-bottom: 5rem;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   gap: 2.5rem;
@@ -122,8 +123,30 @@ body {
   border-radius: 1rem;
 }
 .course_section .course_card {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 1rem;
   background: #FFFFFF;
   border-radius: 1rem;
+  position: relative;
+  padding: 3rem 1.75rem 2rem 1.75rem;
+}
+.course_section .course_card a {
+  font-weight: 700;
+  text-decoration: none;
+  color: #F74780;
+  transition: all 0.2s;
+}
+.course_section .course_card a:hover {
+  color: #FFA7C3;
+}
+.course_section .course-icon {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 0;
+  left: 18.5%;
 }
 
 @media screen and (max-width: 375px) {
@@ -140,7 +163,7 @@ body {
   align-items: center;
   flex-direction: row;
   background: #13183F;
-  height: 50%;
+  padding: 3rem 1rem;
 }
 
 .nav {
