--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -2,6 +2,7 @@
 
 .course_section{
     margin: 1rem;
+    margin-bottom: 5rem;
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     gap: 2.5rem;
@@ -13,8 +14,30 @@
     }
 
     .course_card{
+        @include flex(center, flex-start, column);
+        gap: 1rem;
         background: $white;
         border-radius: 1rem;
+        position: relative;
+        padding: 3rem 1.75rem 2rem 1.75rem;
+
+        a{
+            font-weight: 700;
+            text-decoration: none;
+            color: $pink;
+            transition: all 0.2s;
+
+            &:hover{
+                color: $mildPink;
+            }
+        }
+    }
+
+    .course-icon{
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 0;
+        left: 18.5%;
     }
 }
 
