--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 */
 img, picture, video, canvas, svg {
   display: block;
-  max-width: 100%;
+  max-width: 100vw;
 }
 
 /*
@@ -64,7 +64,7 @@ p, h1, h2, h3, h4, h5, h6 {
   color: #83869A;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 875px) {
   .heading_XL {
     font-size: 2.5rem;
     font-weight: 800;
@@ -81,6 +81,10 @@ p, h1, h2, h3, h4, h5, h6 {
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   background: linear-gradient(#FFFFFF, rgba(72, 81, 255, 0.065));
+}
+
+body, main, html {
+  overflow-x: hidden;
 }
 
 .button, .button_third, .button_second, .button_first {
@@ -107,7 +111,7 @@ body {
   background: linear-gradient(#4851FF, #F02AA6);
 }
 .button_third:is(:hover, :focus) {
-  background: linear-gradient(rgba(72, 81, 255, 0.5), rgba(240, 42, 166, 0.5));
+  background: linear-gradient(rgba(72, 81, 255, 0.6), #FFA7C3);
 }
 
 .course_section {
@@ -149,7 +153,7 @@ body {
   left: 18.5%;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 530px) {
   .course_section {
     grid-template-rows: repeat(6, min-content);
   }
@@ -176,10 +180,6 @@ body {
 }
 
 .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   margin: 1rem;
   gap: 2rem;
 }
@@ -189,6 +189,20 @@ body {
 }
 .header_text {
   margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 530px) {
+  .nav {
+    margin: 1.5rem 2.75rem;
+  }
+  .header {
+    margin: 5.5rem 2.75rem;
+    flex-direction: row;
+    width: 52.5%;
+  }
+  .picture {
+    z-index: -10;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
