--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -17,7 +17,7 @@
   */
   img, picture, video, canvas, svg {
     display: block;
-    max-width: 100%;
+    max-width: 100vw;
   }
   /*
     6. Remove built-in form typography styles
