--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,7 +7,6 @@
 }
 
 .header{
-    @include flex(center, center, column);
     margin: 1rem;
     gap: 2rem;
 
@@ -18,5 +17,21 @@
 
     &_text{
         margin-bottom: 1rem;
+    }
+}
+
+@media screen and (min-width: 530px){
+    .nav{
+        margin: 1.5rem 2.75rem;
+    }
+
+    .header{
+        margin: 5.5rem 2.75rem;
+        flex-direction: row;
+        width: 52.5%;
+    }
+
+    .picture{
+        z-index: -10;
     }
 }
