--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,33 +1,18 @@
-/* Taken from https://www.joshwcomeau.com/css/custom-css-reset/
-  1. Use a more-intuitive box-sizing model.
-*/
+/* Taken from https://www.joshwcomeau.com/css/custom-css-reset/*/
   *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
-  /*
-    4. Improve text rendering
-  */
+
   body {
     -webkit-font-smoothing: antialiased;
   }
-  /*
-    5. Improve media defaults
-  */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100vw;
-  }
-  /*
-    6. Remove built-in form typography styles
-  */
+
   input, button, textarea, select {
     font: inherit;
   }
-  /*
-    7. Avoid text overflows
-  */
+
   p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
   }
