--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,6 +7,7 @@
 }
 
 .header{
+    @include flex(center, center, column);
     margin: 1rem;
     gap: 2rem;
 
@@ -26,12 +27,15 @@
     }
 
     .header{
-        margin: 5.5rem 2.75rem;
+        margin: 5rem 2.75rem 13rem 2.75rem;
         flex-direction: row;
-        width: 52.5%;
+        width: 50%;
     }
 
     .picture{
         z-index: -10;
+        position: absolute;
+        top: -10%;
+        right: -310px;
     }
 }
