--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -11,3 +11,9 @@
         padding: 3rem 2.75rem;
     }
 }
+
+@media screen and (min-width: 1030px){
+    .footer{
+        padding: 2.5rem 9rem;
+    }
+}
